--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>HEllo This is a new Change in new file</h1>
+    <h1>Events In Javascript.</h1>
+
+    <div style="border: 2px solid red; padding: 10px;">
+
+        <button style="border: 2px solid red; padding: 10px;">Click</button>
+        <p style="border: 2px solid red; padding: 10px;">hello</p>
+    </div>
+
+
+
+    <script src="script.js"></script>
 </body>
+
 </html>
